src/scss/script-changes-style.scss
.changing-text {
    background-color: $portfolio-main-background;
    border: 0;
    border-bottom: 2px solid black;
    padding: 1px 3px;
    font-size: 26px;

    &:focus {
        border: 0;
        outline: 1px solid black;
        border-radius: 5px;
    }
}

.changing-descr {
    outline: 0;
    border: 0;
    resize: none;
    padding: 0;
    width: 100%;
    white-space: pre;
}

